# caos-collector

./: .dockerignore  .gitignore  .gitlab-ci.yml  AUTHORS  Dockerfile  Dockerfile.vagrant  README.md  Vagrantfile  build_docker.sh  build_release.sh  collector.conf  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
caos_collector/: __init__.py  _version.py  ceilometer.py  cfg.py  log.py  main.py  metrics.py  openstack.py  placement.py  pollsters.py  scheduler.py  shell.py  tsdb.py  utils.py
caos_collector/jobs/: __init__.py  domains_metadata_job.py  hypervisors_metadata_job.py  hypervisors_state_job.py  job.py  projects_metadata_job.py  projects_quotas_job.py  report_alive_job.py  vm_usage_job.py
caos_collector/tests/: test_cfg.py  test_tsdb.py  test_utils.py
ci-tools/: common.sh  docker-build.sh  docker-release.sh  docker-test.sh  git-describe.sh  git-semver-pbr.sh  git-semver.sh  prepare.sh  release-build.sh
etc/caos/: caos-collector.conf.yaml  collector.conf
src/: __init__.py  _version.py  apistorage.py  caos_api.py  ceilometer.py  cfg.py  collector.py  log.py  main.py  openstack.py  pollsters.py  scheduler.py  store.py  utils.py
