[metadata]
name = caos-collector
summary = Data collector for CAOS
description-file = README.md
license = Apache License, Version 2.0
author = Fabrizio Chiarello
author-email = fabrizio.chiarello@pd.infn.it
classifier =
  Environment :: OpenStack
  Intended Audience :: Information Technology
  Intended Audience :: System Administrators
  License :: OSI Approved :: Apache Software License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 2
  Programming Language :: Python :: 2.7

[files]
packages =
  caos_collector
scripts =
  bin/caos_collector
